crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_from_requirements__runs_by_project_glob.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, client)" ]
    3 [ label="RunTask(client:test)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
}
