crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_from_requirements__runs_by_task_glob.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(deps-affected)" ]
    2 [ label="RunTask(deps-affected:a)" ]
    3 [ label="RunTask(deps-affected:b)" ]
    4 [ label="RunTask(deps-affected:c)" ]
    5 [ label="SyncProject(deps)" ]
    6 [ label="RunTask(deps:a)" ]
    7 [ label="RunTask(deps:c)" ]
    8 [ label="SyncProject(ci)" ]
    9 [ label="RunTask(ci:ci2-dependency)" ]
    10 [ label="RunTask(ci:ci3-dependency)" ]
    11 [ label="RunTask(ci:ci4-dependency)" ]
    1 -> 0 [ ]
    4 -> 1 [ ]
    3 -> 1 [ ]
    3 -> 4 [ ]
    2 -> 1 [ ]
    2 -> 3 [ ]
    5 -> 0 [ ]
    6 -> 5 [ ]
    7 -> 5 [ ]
    8 -> 0 [ ]
    9 -> 8 [ ]
    10 -> 8 [ ]
    11 -> 8 [ ]
}
